<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/safe_title_public" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/safe_pass"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:drawableLeft="@drawable/btn_check_off"
            android:drawablePadding="7dp"
            android:gravity="center"
            android:onClick="showPass"
            android:text="@string/safe_showpass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="submit"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/safe_confirm"
                android:textColor="@color/white" />

            <Button
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="reset"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/safe_resetpass"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>